--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,7 +45,7 @@
                 "localhost:0"
             ],
             "program": "",
-            "cwd": "${workspaceRoot}/FB5/",
+            "cwd": "${workspaceRoot}/practicaPhp/",
             "port": 9003,
             "serverReadyAction": {
                 "pattern": "Development Server \\(http://localhost:([0-9]+)\\) started",
