--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,7 +45,7 @@
                 "localhost:0"
             ],
             "program": "",
-            "cwd": "${workspaceRoot}/practica-cliente/ajaxjson.html",
+            "cwd": "${workspaceRoot}/club-navegacion/",
             "port": 9003,
             "serverReadyAction": {
                 "pattern": "Development Server \\(http://localhost:([0-9]+)\\) started",
