BAse de datos perdida :( creada nueva base de datos y comienzo de adaptar el código

--- a/club-navegacion/config/bbdd.ini
+++ b/club-navegacion/config/bbdd.ini
@@ -1,4 +1,4 @@
-database.username="david"
-database.password="qwerty123456!!"
-database.host="localhost"
-database.dbname="proyectofg"
+database.username="davidclub-de-navegacion"
+database.password="fOo_33!!FTSZOg-aQQKZ"
+database.host="192.168.1.134"
+database.dbname="club-de-navegacion"
